force-app/main/default/objects/VisMed_ConfigApp__c/VisMed_ConfigApp__c.object-meta.xml
<CustomObject>
    <label>ConfigApp</label>
    <nameField>
        <label>ConfigApp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ConfigApp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>