force-app/main/default/objects/VisMed_ConfigApp__c/fields/Objeto_Principal__c.field-meta.xml
<CustomField>
    <fullName>Objeto_Principal__c</fullName>
    <label>Objeto Principal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>