force-app/main/default/objects/VisMed_ConfigApp__c/fields/VisMed_Activa__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Activa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>