force-app/main/default/objects/VisMed_ConfigApp__c/fields/VisMed_Query__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Query__c</fullName>
    <label>Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>