force-app/main/default/objects/VisMed_ConfigApp__c/fields/VisMed_Vista_Compacta__c.field-meta.xml
<CustomField>
    <fullName>VisMed_Vista_Compacta__c</fullName>
    <label>Vista Compacta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>