force-app/main/default/objects/VisMed_ConfigApp__c/recordTypes/Funcionalidad.recordType-meta.xml
<RecordType>
    <fullName>Funcionalidad</fullName>
    <active>true</active>
    <description>RecordType para registrar las distintas funcionalidades de la app.</description>
    <label>Funcionalidad</label>
</RecordType>