force-app/main/default/objects/VisMed_ConfigApp__c/recordTypes/Objeto.recordType-meta.xml
<RecordType>
    <fullName>Objeto</fullName>
    <active>true</active>
    <description>RecordType para registrar los distintos objetos de la app.</description>
    <label>Objeto</label>
</RecordType>