force-app/main/default/objects/VisMed_ConfigApp__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>VisMed_ConfigApp__c.Funcionalidad</value>
    </filters>
    <label>All</label>
</ListView>